<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PERHITUNGAN_VOLUME_BALOK"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_length"
        android:hint="@string/panjang"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:lines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_width"
        android:hint="@string/lebar"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:lines="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_height"
        android:hint="@string/tinggi"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:lines="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/btn_calculate"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

</LinearLayout>